<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/changeFontTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/spinnerColor"
        android:layout_alignBottom="@+id/spinnerColor"
        android:layout_alignLeft="@+id/songName"
        android:layout_alignStart="@+id/songName"
        android:text="@string/change_Font_Color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/spinnerBack"
        android:layout_alignBottom="@+id/spinnerBack"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:text="@string/ChangeBackgroundColor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/spinnerFontFamily"
        android:layout_alignBottom="@+id/spinnerFontFamily"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:text="@string/ChangeFont"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerFontFamily"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerBack"
        android:layout_alignStart="@+id/spinnerBack"
        android:layout_below="@+id/spinnerBack"
        android:layout_marginRight="17dp"
        android:entries="@array/FontStyle" />

    <Spinner
        android:id="@+id/spinnerBack"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerLeft"
        android:layout_alignStart="@+id/spinnerLeft"
        android:layout_below="@+id/spinnerColor"
        android:layout_marginRight="17dp"
        android:entries="@array/ColorBack" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/spinnerLeft"
        android:layout_alignBottom="@+id/spinnerLeft"
        android:layout_alignEnd="@+id/changeFontTextView"
        android:layout_alignRight="@+id/changeFontTextView"
        android:layout_marginEnd="-47dp"
        android:layout_marginRight="-47dp"
        android:text="@string/Margin"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/spinnerLH"
        android:layout_alignBottom="@+id/spinnerLH"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:text="@string/LineHeight"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerLH"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerFS"
        android:layout_alignStart="@+id/spinnerFS"
        android:layout_below="@+id/spinnerFS"
        android:layout_marginRight="17dp"
        android:entries="@array/LineHeight" />

    <Spinner
        android:id="@+id/spinnerRight"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/spinnerLeft"
        android:layout_alignBottom="@+id/spinnerLeft"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="17dp"
        android:entries="@array/Margin" />

    <Spinner
        android:id="@+id/spinnerLeft"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerAlign"
        android:layout_toLeftOf="@+id/spinnerRight"
        android:layout_toStartOf="@+id/spinnerRight"
        android:entries="@array/Margin" />

    <Spinner
        android:id="@+id/spinnerAlign"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerLH"
        android:layout_alignStart="@+id/spinnerLH"
        android:layout_below="@+id/spinnerLH"
        android:layout_marginRight="17dp"
        android:entries="@array/testAlignOption" />

    <Spinner
        android:id="@+id/spinnerFS"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerFontFamily"
        android:layout_alignStart="@+id/spinnerFontFamily"
        android:layout_below="@+id/spinnerFontFamily"
        android:layout_marginRight="17dp"
        android:entries="@array/FontSize" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/spinnerFS"
        android:layout_alignBottom="@+id/spinnerFS"
        android:layout_alignLeft="@+id/changeFontTextView"
        android:layout_alignStart="@+id/changeFontTextView"
        android:text="@string/FontSize"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerColor"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerBack"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/spinnerBack"
        android:layout_marginRight="17dp"
        android:entries="@array/ColorFont" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/spinnerAlign"
        android:layout_alignBottom="@+id/spinnerAlign"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:text="@string/TextAlign"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonDefault"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:text="@string/DefaultSettings"
        tools:targetApi="m" />

</RelativeLayout>